Upstream Krumo updates for PHP 8.5.x

--- a/include/krumo/krumo.sample.ini
+++ b/include/krumo/krumo.sample.ini
@@ -40,7 +40,7 @@
 ;show_version = true
 ;show_call_info = true
 
-; Display carraige returns inside of strings are a literal \n to make it easier to read
+; Display carraige returns inside of strings as a literal \n to make it easier to read
 ; If this is set to false, carriage returns will be changed to <br /> to display in HTML
 ;show_carriage_returns = false
 
